--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -15,7 +15,7 @@
   </div>
   <div class="logo">
     <div class="logo-image">
-      <img src="../../assets/images/flame.png">
+      <img src="/dwj-p6/assets/images/flame.png">
     </div>
     <div class="logo-text">
       <h1>
